force-app/main/default/objects/Commission_Attainment_Schedule_Item__c.object
<CustomObject>
    <description>Commission Tier value for attainment schedule</description>
    <fields>
        <fullName>Amount_From__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Beginning Tier Value</inlineHelpText>
        <label>Amount From</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_To__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Upper Value of Tier</inlineHelpText>
        <label>Amount To</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Attainment_Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Scehdule this item is associated with</inlineHelpText>
        <label>Commission Attainment Schedule</label>
        <referenceTo>Commission_Attainment_Schedule__c</referenceTo>
        <relationshipLabel>Commission Attainment Schedule Items</relationshipLabel>
        <relationshipName>Commission_Attainment_Schedule_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <inlineHelpText>Percent to be recognized for attaining this tier</inlineHelpText>
        <label>Percent</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Commission Attainment Schedule Item</label>
    <nameField>
        <label>Commission Attainment Schedule Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Attainment Schedule Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>